fixed horizontal overflow scrolling

--- a/portfolio/src/styles/styles.scss
+++ b/portfolio/src/styles/styles.scss
@@ -6,6 +6,7 @@ html,
 body {
     font-family: $ibm-plex-sans;
     font-size: 16px;
+    overflow-x: hidden;
 }
 
 p {
